@@ -3,7 +3,8 @@
  ******************/
 
 /* minimize */
-.titlebar .titlebutton.minimize {
+.titlebar .titlebutton.minimize,
+.ssd .titlebar .button.minimize:not(:hover):not(:active) {
    color: transparent;
     border-image: none;
     box-shadow: none;
@@ -27,7 +28,8 @@
 }
 
 /* maximize */
-.titlebar .titlebutton.maximize {
+.titlebar .titlebutton.maximize,
+.ssd .titlebar .button.maximize:not(:hover):not(:active)  {
    color: transparent;
     border-image: none;
     box-shadow: none;
@@ -52,7 +54,8 @@
 }
 
 /* close */
-.titlebar .titlebutton.close {
+.titlebar .titlebutton.close,
+.ssd .titlebar .button.close:not(:hover):not(:active)  {
    color: transparent;
     border-image: none;
     box-shadow: none;
