@@ -1,6 +1,7 @@
 2015.04.19:
 - convert titlebar buttons to png (seems that svg images  don't scale well) and
   make them a little bit bigger 
+- GTK3 toolbar : no bottom border (match GTK2 theme)
 
 
 2015.04.17:
